Fix glove wave on mobile

--- a/css/panel.css
+++ b/css/panel.css
@@ -56,6 +56,7 @@
   .feature-panel-content {
     display: block;
     min-height: auto;
+    height: auto;
   }
 }
 .feature-panel-content.right {
